--- a/tracking-page.html
+++ b/tracking-page.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>X-TOS Location Tracker</title>
+    <title>shop colection</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#667eea">
     <style>
